# amazon-insights-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  MANUAL_TEST_GUIDE.md  Makefile  README.md  SWAGGER_FIX_SUMMARY.md  SWAGGER_GUIDE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  get_token.py  pyproject.toml  query_performance_report_20250819_153153.json  requirements-dev.txt  requirements.txt  test_api.py  test_celery.py  test_competitive_intelligence.py  test_e2e_real_data.py  test_firecrawl_auth.py  test_firecrawl_debug.py  test_openai_connection.py  test_real_amazon_data.py
docs/: api-documentation.md  deployment-guide.md  developer-guide.md  development-phases.md  project-context.md  security-configuration.md  troubleshooting.md
docs/architecture/: data-flow.md  deployment.md  scalability.md  system-overview.md
examples/: api_usage_examples.py
migrations/: README  env.py
migrations/versions/: 20250819_1403-11809d3e71e5_add_product_insights_models.py  20250819_1530-optimize_database_indexes.py
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: datasources.yml
nginx/: amazon-insights.conf
scripts/: create_demo_data.py  query_performance_analysis.py  security_tools.py
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: auth.py  cache_management.py  competitors.py  health.py  products.py  rate_limits.py  users.py
src/app/core/: config.py  database.py  middleware.py  rate_limiter.py  redis.py  security.py
src/app/models/: __init__.py  base.py  competitor.py  product.py  product_insights.py  user.py
src/app/schemas/: competitor.py  product.py  user.py
src/app/services/: advanced_cache.py  competitive_cache.py  competitor_service.py  data_standardization.py  firecrawl_service.py  openai_service.py  product_service.py
src/app/tasks/: analysis_tasks.py  celery_app.py  competitor_tasks.py  product_tasks.py  scraping_tasks.py
tests/: conftest.py  test_advanced_cache.py  test_api_comprehensive.py  test_api_endpoints.py  test_firecrawl_service.py  test_health.py  test_models.py  test_openai_service.py  test_schemas.py  test_security.py  test_services.py
